--- a/templates/veterinaria/atencion.html
+++ b/templates/veterinaria/atencion.html
@@ -3,194 +3,74 @@
 
 {% block titulo %}Catálogo atenciones{% endblock %}
 
-{% block scripts %}
-<script src="{% static 'js/jquery-3.7.0.min.js' %}"></script>
-<link rel="stylesheet" href="{% static 'css/dataTables.bootstrap5.min.css' %}">
-<script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
-<script src="{% static 'js/dataTables.bootstrap5.min.js' %}"></script>
-<script src="https://cdn.datatables.net/plug-ins/1.10.25/i18n/Spanish.json"></script>
-<script>
-  $(document).ready( function () {
-      $('#atencionesTable').DataTable({
-          language: {
-              url: 'https://cdn.datatables.net/plug-ins/1.10.25/i18n/Spanish.json'
-          }
-      });
-  } );
-</script>
-{% endblock %}
-
 {% block atenciones %}active" aria-current="page{% endblock %}
 
 {% block contenido %}
-  <div class="ms-auto col-xl-11 col-md-10 col-12 ps-5 mt-md-0 mt-5 pt-md-0 pt-3">
-    <div class="container m-0 p-0">
-      <h1 class="mt-3">Atenciones</h1>
-      {% if perms.veterinaria.add_atencion %}
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary mb-5 mt-3 justify-content-end align-self-end" data-bs-toggle="modal" data-bs-target="#form_agregar_atencion">
-        Agregar una atención
-      </button>
-      {% endif %}
-      <!-- Modal -->
-      <div class="modal fade" id="form_agregar_atencion" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="form_agregar_atencionLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="form_agregar_atencionLabel">Crear atención</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <form method="POST">
-                {% csrf_token %}
-                <div class="row">
-                  <div class="mb-3 col-6">
-                    {{ form.fecha_atencion.label_tag  }}
-                    {{ form.fecha_atencion }}
-                    {{ form.fecha_atencion.errors }}
-                    <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                  </div>
-                  <div class="mb-3 col-3">
-                    {{ form.hora_ingreso.label_tag  }}
-                    {{ form.hora_ingreso }}
-                    {{ form.hora_ingreso.errors }}
-                    <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                  </div>
-                  <div class="mb-3 col-3">
-                    {{ form.hora_termino.label_tag  }}
-                    {{ form.hora_termino }}
-                    {{ form.hora_termino.errors }}
-                  </div>
-                </div>
-                <div class="mb-3">
-                  {{ form.id_mascota.label_tag  }}
-                  {{ form.id_mascota }}
-                  {{ form.id_mascota.errors }}
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                </div>
-                <div class="mb-3">
-                  {{ form.agendada_por_asistente.label_tag  }}
-                  {{ form.agendada_por_asistente }}
-                  {{ form.agendada_por_asistente.errors }}
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                </div>
-                <div class="mb-3">
-                  {{ form.id_veterinario.label_tag  }}
-                  {{ form.id_veterinario }}
-                  {{ form.id_veterinario.errors }}
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                </div>
-                <div class="mb-3">
-                  {{ form.diagnostico.label_tag  }}
-                  {{ form.diagnostico }}
-                  {{ form.diagnostico.errors }}
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                </div>
-                <div class="mb-3">
-                  {{ form.tratamiento.label_tag  }}
-                  {{ form.tratamiento }}
-                  {{ form.tratamiento.errors }}
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                </div>
-                <div class="mb-3">
-                  {{ form.observaciones.label_tag  }}
-                  {{ form.observaciones }}
-                  {{ form.observaciones.errors }}
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                </div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-              <button type="submit" class="btn btn-primary">Crear atención</button>
-            </div>
-          </form>
-          </div>
+<div class="ms-auto col-xl-11 col-md-10 col-12 ps-5 mt-md-0 mt-5 pt-md-0 pt-3">
+  <div class="container m-0 p-0">
+    <h1>Atención</h1>
+    <form method="POST" action="{% url 'atencionEdit' atencion.id %}">
+      {% csrf_token %}
+      <div class="row">
+        <div class="mb-3 col-6">
+          {{ form.fecha_atencion.label_tag }}
+          <input type="date" class="form-control" name="fecha_atencion"
+            value="{{ form.fecha_atencion.value|date:'Y-m-d' }}">
+          {{ form.fecha_atencion.errors }}
+        </div>
+        <div class="mb-3 col-3">
+          {{ form.hora_ingreso.label_tag }}
+          {{ form.hora_ingreso }}
+          {{ form.hora_ingreso.errors }}
+          <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+        </div>
+        <div class="mb-3 col-3">
+          {{ form.hora_termino.label_tag }}
+          {{ form.hora_termino }}
+          {{ form.hora_termino.errors }}
         </div>
       </div>
-    </div>
-    <table class="table table-striped table-hover" id="atencionesTable">
-      <thead>
-        <tr>
-          <th scope="col"><h4>Codigo</h4></th>
-          <th scope="col"><h4>Fecha</h4></th>
-          <th scope="col"><h4>Veterinario</h4></th>
-          <th scope="col"><h4>Hora</h4></th>
-          <th scope="col"><h4>Mascota</h4></th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for atencion in atenciones %}
-        <tr class="align-middle">
-          <th scope="row">{{atencion.id}}</th>
-          <td>{{atencion.fecha_atencion}}</td>
-          <td class="text-capitalize">{{atencion.id_veterinario}}</td>
-          <td>
-            Inicio: {{atencion.hora_ingreso}}<br />
-            Termino: {{atencion.hora_termino}}
-          </td>
-          <td class="text-capitalize">{{atencion.id_mascota.nombre_mascota}}</td>
-          <td>
-            <div class="btn-group">
-              <button type="button" class="btn btn-dark btn-sm" data-bs-toggle="dropdown" aria-expanded="false">
-                ⋮
-              </button>
-              <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" type="button" href="{% url 'verAtencion' atencion.id %}" >Editar Atención</a></li>
-                <li><a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#atencion{{atencion.id}}">Ver Detalles</a></li>
-                <li><a class="dropdown-item" type="button" href="{% url 'atencionDel' atencion.id %}">Eliminar Atención</a></li>
-              </ul>
-            </div>
-          </td>
-        </tr>
-        <div class="modal fade" id="atencion{{atencion.id}}" tabindex="-1" aria-labelledby="ModalLabel{{atencion.id}}" aria-hidden="true">
-          <div class="modal-dialog modal-xl">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="ModalLabel{{atencion.id}}">Atención {{atencion.id}}</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <form>
-                  <div class="row">
-                    <div class="mb-3 col-6">
-                      Fecha: {{ atencion.fecha_atencion }}
-                      <!--{% if atencion.fecha_atencion < fecha_actual %} <span class="badge text-bg-secondary">Realizada</span>
-                      {% endif %}-->
-                    </div>
-                    <div class="mb-3 col-3">
-                      Hora Ingreso: {{ atencion.hora_ingreso }}
-                    </div>
-                    <div class="mb-3 col-3">
-                      Hora Termino: {{ atencion.hora_termino }}
-                    </div>
-                  </div>
-                  <div class="mb-3">                              
-                    Agendada por: <span class="text-capitalize">{{ atencion.agendada_por_asistente.nombres }} {{ atencion.agendada_por_asistente.apellidos }}</span>
-                  </div>
-                  <div class="mb-3">            
-                    Veterinario: <span class="text-capitalize">{{ atencion.id_veterinario.nombres }} {{ atencion.id_veterinario.apellidos }}</span>
-                  </div>
-                  <div class="mb-3">
-                    Diagnostico: {{ atencion.diagnostico }}                    
-                  </div>
-                  <div class="mb-3">                              
-                    Tratamiento: {{ atencion.tratamiento }}                                                        
-                  </div>
-                  <div class="mb-3">                              
-                    Observaciones: {{ atencion.observaciones }}                              
-                  </div>
-                </form>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Ver Detalles Mascota</button>
-              </div>
-            </div>
-          </div>
-        </div>                  
-        {% endfor %}
-      </tbody>
-    </table>
+      <div class="mb-3">
+        {{ form.id_mascota.label_tag }}
+        {{ form.id_mascota }}
+        {{ form.id_mascota.errors }}
+        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+      </div>
+      <div class="mb-3">
+        {{ form.agendada_por_asistente.label_tag }}
+        {{ form.agendada_por_asistente }}
+        {{ form.agendada_por_asistente.errors }}
+        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+      </div>
+      <div class="mb-3">
+        {{ form.id_veterinario.label_tag }}
+        {{ form.id_veterinario }}
+        {{ form.id_veterinario.errors }}
+        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+      </div>
+      <div class="mb-3">
+        {{ form.diagnostico.label_tag }}
+        {{ form.diagnostico }}
+        {{ form.diagnostico.errors }}
+        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+      </div>
+      <div class="mb-3">
+        {{ form.tratamiento.label_tag }}
+        {{ form.tratamiento }}
+        {{ form.tratamiento.errors }}
+        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+      </div>
+      <div class="mb-3">
+        {{ form.observaciones.label_tag }}
+        {{ form.observaciones }}
+        {{ form.observaciones.errors }}
+        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+      </div>
   </div>
+  <div class="mb-3 text-center">
+    <a type="button" class="btn btn-danger" href="/atenciones/">Cancelar</a>
+    <button type="submit" class="btn btn-warning">Editar atención</button>
+  </div>
+</form>
 </div>
 {% endblock %}
