--- a/templates/veterinaria/clientes.html
+++ b/templates/veterinaria/clientes.html
@@ -179,7 +179,7 @@
                       <h5 class="card-title text-capitalize">{{mascota.nombres}}</h5>
                       <h6 class="card-subtitle mb-2 text-body-secondary">{{mascota.edad_meses}} meses - {% if mascota.sexo %}Macho{% else %}Hembra{% endif %}</h6>
                       <p class="card-text text-capitalize">{{mascota.num_chip}} - {{mascota.id_raza.nombre_raza}} - {{mascota.id_raza.nombre_especie}}</p>
-                      <a href="#" class="btn btn-primary">Detalles mascota</a>
+                      <a href="{% url "verFicha" ficha_id=mascota.id %}" class="btn btn-primary">Detalles mascota</a>
                     </div>
                   </div>
                 {% endif %}
