--- a/templates/veterinaria/atencion.html
+++ b/templates/veterinaria/atencion.html
@@ -68,8 +68,9 @@
       </div>
   </div>
   <div class="mb-3 text-center">
-    <a type="button" class="btn btn-danger" href="/atenciones/">Cancelar</a>
-    <button type="submit" class="btn btn-warning">Editar atención</button>
+    <a type="button" class="btn btn-secondary mx-2" href="/atenciones/">Cancelar</a>
+    <a type="button" class="btn btn-danger mx-2" type="button" href="{% url 'atencionDel' atencion.id %}">Eliminar Atención</a>
+    <button type="submit" class="btn btn-warning mx-2">Editar atención</button>
   </div>
 </form>
 </div>
