--- a/templates/veterinaria/fichas_clinicas.html
+++ b/templates/veterinaria/fichas_clinicas.html
@@ -1,7 +1,7 @@
 {% extends "veterinaria/base.html" %}
 {% load static %}
 
-{% block titulo %}Catálogo atenciones{% endblock %}
+{% block titulo %}Catálogo fichas{% endblock %}
 
 {% block scripts %}
 <script src="{% static 'js/jquery-3.7.0.min.js' %}"></script>
